welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:40: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche()
                              ^